--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cinematic-photo-folio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Chetan Mestry Photography</title>
+    <meta name="description" content="A cinematic photography portfolio by Chetan Mestry." />
+    <meta name="author" content="Chetan Mestry" />
 
-    <meta property="og:title" content="cinematic-photo-folio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph for link previews -->
+    <meta property="og:title" content="Chetan Mestry Photography" />
+    <meta property="og:description" content="A cinematic photography portfolio by Chetan Mestry." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/preview.jpg" /> <!-- Change if needed -->
+    <meta property="og:url" content="https://cinematic-photo-folio-website.vercel.app/" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Chetan Mestry Photography" />
+    <meta name="twitter:description" content="A cinematic photography portfolio by Chetan Mestry." />
+    <meta name="twitter:image" content="/preview.jpg" />
+
+    <link rel="icon" href="/logo2.png" type="image/png" />
   </head>
 
   <body>
@@ -22,7 +28,5 @@
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
-
-    <link rel="icon" href="cinematic-photo-folio-main/public/logo2.png" type="image/png" />
   </body>
 </html>
